2017-02-19  Albrecht Dreß

	Fix unsafe permissions for config-private

	* libbalsa/libbalsa-conf.c (lbc_init), (lbc_lock), (lbc_sync):
	  ensure that permissons on $HOME/.balsa/config-private are 0600
	  after saving it.

2017-02-08  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Do not access a stale pointer

	* src/main-window.c (balsa_window_destroy): nullify window->preview;
	(bw_action_set_enabled): check for NULL window->preview;
	(bw_idle_replace): ditto.

2017-01-24  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Fix some conditional compilation code so that uncrustify does
	not break the build.

	* src/balsa-message.c (balsa_headers_attachments_popup),
	(tree_button_press_cb): fix it.
	* src/balsa-mime-widget-text.c (prepare_url_offsets): ditto.
	* src/sendmsg-window.c (attachment_button_press_cb),
	(attachment_popup_cb): ditto.

2017-01-03  Albrecht Dreß

	Use glib for digest calculations

	* libbalsa/imap/auth-cram.c (imap_auth_cram):
	* libbalsa/imap/pop3.c (compute_auth_hash):

2016-12-28  Pawel Salek <pawsa0@gmail.com>

	* libbalsa/imap/imap-tls.c: avoid warnings with openssl-1.1.x

2016-12-20  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Get notifications about GtkPaned's position to save the new
	position, instead of the size-allocate signal for the child.

	* src/main-window.c (bw_master_position_cb): callback for
	  changes in the paned-master's position;
	  (bw_slave_position_cb): ditto paned-slave;
	  (balsa_window_fix_paned): change signal connections.

2016-12-20  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Avoid geometry creep when maximized.

	* src/main.c (real_main): when initially maximized,
	delay 500 msec before setting paned positions and connecting to
	signals.

2016-12-14  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Build with gpgme version >= 1.8

	* configure.ac: use $gpgmecfg --thread=pthread --libs only for
	gpgme version < 1.8.

2016-12-10  Pawel Salek <pawsa0@gmail.com>
